Change input type for all input fields to be a little more appropriate to their field types.

--- a/plant_tracker/src/main/res/layout/dialog_add_group.xml
+++ b/plant_tracker/src/main/res/layout/dialog_add_group.xml
@@ -33,7 +33,7 @@
             android:layout_below="@+id/textView26"
             android:layout_toEndOf="@+id/textView26"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textCapWords" />
 
         <Button
             android:id="@+id/cancelButton"
