--- a/plant_tracker/src/main/res/layout/dialog_general_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_general_event.xml
@@ -20,7 +20,8 @@
             android:id="@+id/generalEventAbbrevTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:inputType="textCapCharacters" />
 
     </LinearLayout>
 
@@ -40,7 +41,8 @@
             android:id="@+id/generalEventNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="4.71" />
+            android:layout_weight="4.71"
+            android:inputType="textCapWords" />
 
     </LinearLayout>
 
