--- a/plant_tracker/src/main/res/layout/dialog_current_state_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_current_state_event.xml
@@ -21,6 +21,7 @@
             android:id="@+id/stateNameAutoCompleteTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2.19" />
+            android:layout_weight="2.19"
+            android:inputType="textCapWords" />
     </LinearLayout>
 </LinearLayout>
