Keep the All plants view and other static views at the top of the list. Hide groups that don't have any members from the side menu. Update the add plant dialog to use the same dialog type setup as the dialog menus. Add custom events to the "Add Event" drop down on the individual plant screen. Add empty view for all plants listview when no plants are found.

--- a/plant_tracker/src/main/res/layout/list_all_plants.xml
+++ b/plant_tracker/src/main/res/layout/list_all_plants.xml
@@ -13,4 +13,10 @@
         android:id="@+id/plantListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <include
+        android:id="@+id/emptyPlantListView"
+        layout="@layout/empty_plant_list"
+        android:visibility="gone" />
+
 </LinearLayout>
