--- a/plant_tracker/src/main/res/layout/dialog_generic_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_generic_event.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingBottom="5dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingTop="5dp"
     android:weightSum="1">
 
     <TabHost
@@ -91,11 +96,17 @@
                     layout="@layout/dialog_current_state_event"
                     android:visibility="gone" />
 
+                <include
+                    android:id="@+id/dialogNewPlantLayout"
+                    layout="@layout/dialog_new_plant"
+                    android:visibility="gone" />
+
             </FrameLayout>
         </LinearLayout>
     </TabHost>
 
     <LinearLayout
+        android:id="@+id/applyToGroupLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
