Added views for managing custom events, plant states and groups. Custom events, plant states and groups can now be deleted by long pressing the individual item.

--- a/plant_tracker/src/main/res/layout/list_all_plants.xml
+++ b/plant_tracker/src/main/res/layout/list_all_plants.xml
@@ -16,7 +16,7 @@
 
     <include
         android:id="@+id/emptyPlantListView"
-        layout="@layout/empty_plant_list"
+        layout="@layout/list_view_no_items_found"
         android:visibility="gone" />
 
 </LinearLayout>
