--- a/plant_tracker/src/main/res/layout/dialog_generic_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_generic_event.xml
@@ -131,20 +131,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/cancelButton"
-            android:layout_width="193dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel" />
 
         <Button
             android:id="@+id/okButton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="OK" />
+            android:text="OK"
+            android:textAlignment="center" />
     </LinearLayout>
 
 </LinearLayout>
