--- a/plant_tracker/src/main/res/layout/plant_state_list_tile.xml
+++ b/plant_tracker/src/main/res/layout/plant_state_list_tile.xml
@@ -39,7 +39,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="6dip"
-            android:src="@drawable/ic_growing_plant" />
+            android:src="@drawable/ic_moon_phase" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -59,7 +59,7 @@
             android:alpha="0.75"
             android:gravity="right|center_vertical"
             android:paddingRight="5dp"
-            android:text="Plant State"
+            android:text="Plant Phase"
             android:visibility="visible" />
     </RelativeLayout>
 
