Added image attachment tab to event dialog. Added basic image capture by loading a camera intent. Added basic image selection by loading an image picker intent. Still lacks saving these selections and updating/storing the thumbnail of the plant from these selections.

--- a/plant_tracker/src/main/res/layout/dialog_generic_event.xml
+++ b/plant_tracker/src/main/res/layout/dialog_generic_event.xml
@@ -66,6 +66,31 @@
                         android:headerBackground="@drawable/side_nav_bar" />
                 </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/tab4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/openCameraButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Open Camera" />
+
+                    <Button
+                        android:id="@+id/attachImagesButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Attach..." />
+
+                    <ListView
+                        android:id="@+id/attachedImagesListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </LinearLayout>
+
                 <include
                     android:id="@+id/generalEventTabLayout"
                     layout="@layout/dialog_general_event"
