--- a/plant_tracker/src/main/res/layout/app_bar_plant_tracker_ui.xml
+++ b/plant_tracker/src/main/res/layout/app_bar_plant_tracker_ui.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nonsense.planttracker.PlantTrackerUi">
+    tools:context="com.nonsense.planttracker.activities.PlantTrackerUi">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButton"
