--- a/plant_tracker/src/main/res/layout/dialog_about.xml
+++ b/plant_tracker/src/main/res/layout/dialog_about.xml
@@ -47,10 +47,9 @@
                 android:id="@+id/textView22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textView19"
                 android:layout_alignStart="@+id/textView19"
                 android:layout_below="@+id/textView19"
-                android:text="Copyright 2017" />
+                android:text="Copyright 2017-2018" />
         </RelativeLayout>
 
         <RelativeLayout
