--- a/plant_tracker/src/main/res/layout/individual_plant.xml
+++ b/plant_tracker/src/main/res/layout/individual_plant.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -18,8 +19,9 @@
         android:background="@android:color/holo_green_dark"
         android:text="White Dwarf (#3) G3"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_bright"
-        android:textSize="30sp" />
+        android:textColor="@android:color/background_light"
+        android:textSize="30sp"
+        android:typeface="normal" />
 
     <RelativeLayout
         android:layout_width="match_parent"
