--- a/plant_tracker/src/main/res/layout/plant_recordable_tile.xml
+++ b/plant_tracker/src/main/res/layout/plant_recordable_tile.xml
@@ -8,18 +8,35 @@
     android:paddingTop="3dp"
     android:paddingBottom="3dp">
 
-    <TextView
-        android:id="@+id/observEventTypeTextView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:gravity="top"
-        android:paddingLeft="8dp"
-        android:text="WFO"
-        android:textColor="@color/colorPrimary"
-        android:textSize="14sp" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/observEventTypeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_weight="1"
+            android:gravity="top"
+            android:paddingLeft="8dp"
+            android:text="WFO"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="Fri, Mar 03, 2024"
+            android:textColor="@color/colorPrimary" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/recordableSummaryTextView"
