Added functionality for editing existing record templates. Renamed the manage templates activity. Changed where the save happens, ManageRecordTemplates will now save when something happens instead of waiting to exit the activity.

--- a/plant_tracker/src/main/res/layout/activity_manage_custom_record_templates.xml
+++ b/plant_tracker/src/main/res/layout/activity_manage_custom_record_templates.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
-    tools:context="com.nonsense.planttracker.activities.ManageCustomEvents">
+    tools:context="com.nonsense.planttracker.activities.ManageRecordTemplates">
 
     <include
         layout="@layout/app_bar_plant_tracker_ui"
