--- a/plant_tracker/src/main/res/layout/nav_header_plant_tracker_ui.xml
+++ b/plant_tracker/src/main/res/layout/nav_header_plant_tracker_ui.xml
@@ -33,6 +33,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Copyright 2017" />
+        android:text="Copyright 2017 - 2018" />
 
 </LinearLayout>
