--- a/plant_tracker/src/main/res/layout/activity_create_record_type.xml
+++ b/plant_tracker/src/main/res/layout/activity_create_record_type.xml
@@ -29,6 +29,26 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Record color" />
+
+        <TextView
+            android:id="@+id/colorPreviewTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary" />
+    </LinearLayout>
+
     <CheckBox
         android:id="@+id/showNotesFieldCheckBox"
         android:layout_width="match_parent"
