Renamed layout for activity which was named previously as a dialog. Fixed alignment with apply to group checkbox and group list spinner on plant data collection activity.

--- a/plant_tracker/src/main/res/layout/activity_collect_plant_data.xml
+++ b/plant_tracker/src/main/res/layout/activity_collect_plant_data.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -111,6 +112,8 @@
             android:id="@+id/applyToGroupCheckbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:paddingBottom="10dp"
             android:paddingRight="10dp"
             android:text="Apply to group"
             android:textSize="18sp" />
@@ -119,7 +122,9 @@
             android:id="@+id/groupListSpinner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
+            android:padding="10dp"
             android:visibility="visible" />
     </LinearLayout>
 
